test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sizeof_void_expression.plx
pub fn main(none) i32 {
    x: i32;
    #  can't apply sizeof to an expression with incomplete type
    return sizeof(cast<none>(x))
}
